--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('https://i.pinimg.com/564x/a3/f8/a8/a3f8a896d78740aa9a728c2d296bfab8.jpg');
+      background: url('./photo_2024-09-09_01-41-57.jpg');
       background-size: cover;
       background-position: center center;
     }
