--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body {
 }
 
 .text:hover:before {
-  content:"Remember not to eat too much candy—you're sweet enough already.";
+  content:"С тех пор, как ты вошла в мою жизнь, мой каждый день становится всё ярче. Спасибо тебе.";
   font-size:25px;
 
 }
@@ -225,7 +225,7 @@ body {
       <div class="right-side"></div>
     </div>
   </div>
-  <div class="text"><span>Happy Valentine's</br> Day!</div>
+  <div class="text"><span>Я тебя люблю</br>Яночка принцесса <3</div>
 </div>
 <p class="hover">- hover over the text -</p>
 </div>
