--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ты щовель</title>
+  <title></title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
@@ -227,7 +227,6 @@ body {
   </div>
   <div class="text"><span>Я тебя люблю</br>Яночка принцесса <3</div>
 </div>
-<p class="hover">- hover over the text -</p>
 </div>
 
 </body>
